--- a/SparkCore/pom.xml
+++ b/SparkCore/pom.xml
@@ -35,7 +35,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.atguigu.test.WordCount</mainClass>
+                            <mainClass>com.atguigu.ch01_wordcount.WordCount</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
